syntax = "proto3";

package kitanoyoru.gigaservices.db;

option go_package = "github.com/kitanoyoru/gigaservices/apps/db/proto";

message Item {
	string id = 1;
	string customer_id = 2;
	string title = 3;
	int64 price = 4;
}

// Create

message CreateItemRequest {
	string customer_id = 1;
	string title = 2;
	int64 price = 3;
}

message CreateItemResponse {
	Item item = 1;
}

// Get

message GetItemByIdRequest {
	string id = 1;
}

message GetItemByIdResponse {
	Item item = 1;
}


// List

message ListItemsRequest {}

message ListItemsResponse {
	repeated Item items = 1;
}


